// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test1 1`] = `
[
  {
    "$type": "rule",
    "nestedRules": [
      {
        "$type": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$type": "property",
            "text": "color: red",
          },
        ],
        "selector": ".inner1 ",
      },
    ],
    "properties": [],
    "selector": ".outer1 ",
  },
]
`;

exports[`test1 2`] = `
[
  {
    "$type": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$type": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1  .inner1 ",
  },
]
`;

exports[`test2 1`] = `
[
  {
    "$type": "rule",
    "nestedRules": [
      {
        "$type": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$type": "property",
            "text": "color: red",
          },
        ],
        "selector": ".inner1, .inner2 ",
      },
    ],
    "properties": [],
    "selector": ".outer1, .outer2 ",
  },
]
`;

exports[`test2 2`] = `
[
  {
    "$type": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$type": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1 .inner1, .outer1  .inner2 ,  .outer2  .inner1,  .outer2   .inner2 ",
  },
]
`;

exports[`test3 1`] = `
[
  {
    "$type": "rule",
    "nestedRules": [
      {
        "$type": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$type": "property",
            "text": "color: red",
          },
        ],
        "selector": ".inner1, .inner2 ",
      },
    ],
    "properties": [
      {
        "$type": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1, .outer2 ",
  },
]
`;

exports[`test3 2`] = `
[
  {
    "$type": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$type": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1,  .outer2 ",
  },
  {
    "$type": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$type": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1 .inner1, .outer1  .inner2 ,  .outer2  .inner1,  .outer2   .inner2 ",
  },
]
`;
